# rules_ts_proto

./: .bazelignore  .bazelversion  .gitignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  go.mod  go.sum  internal_deps.bzl  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml  workspace_snippet.sh
docs/: BUILD.bazel  rules.md
e2e/typescript_proto_usage/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  extending.proto  greeting.proto  package.json  pnpm-lock.yaml  program.mjs
e2e/typescript_proto_usage/google-protobuf-debug/: BUILD.bazel  descriptor.proto  google-protobuf.js  google-protobuf.js.map  package.json
e2e/typescript_proto_usage/polyline/: BUILD.bazel
e2e/typescript_proto_usage/tests/extending_jasmine/: BUILD.bazel  extending.spec.js  tsconfig.json
e2e/typescript_proto_usage/tests/greeting_jasmine/: BUILD.bazel  greeting.spec.js  tsconfig.json
e2e/workspace/: BUILD  WORKSPACE  greeting.proto
e2e/workspace/location/: BUILD.bazel  location.proto
e2e/workspace/polyline/: polyline.proto
ts_proto/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl  workspace_deps.bzl
ts_proto/codegen/: BUILD.bazel  com_github_grpc_grpc_web_empty.js
ts_proto/codegen/protoc_plugin/: BUILD  protoc_plugin.go
ts_proto/codegen/rewrite_imports/: BUILD.bazel  rewrite_imports.go
ts_proto/private/: BUILD.bazel  filtered_files.bzl  toolchains_repo.bzl  ts_proto_library.bzl  utils.bzl  utils_unit_test.bzl
ts_proto/tests/: versions_test.bzl
