"""Provides a simple way test of ts_proto_library."""

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_gonzojive_rules_ts_proto//ts_proto:defs.bzl", "ts_proto_library")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@example_npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")

# Replace with a usage of your rule/macro
filegroup(name = "empty")

exports_files(["package.json"])

build_test(
    name = "smoke_test",
    targets = [
        # targets you add above
        ":greeting_ts_proto",
    ],
)

# gazelle:prefix github.com/gonzojive/rules_ts_proto/e2e/workspace
# gazelle:go_generate_proto false
# gazelle:proto_import_prefix github.com/gonzojive/rules_ts_proto/example/prefix
gazelle(
    name = "gazelle",
)

proto_library(
    name = "greeting_proto",
    srcs = ["greeting.proto"],
    import_prefix = "github.com/gonzojive/rules_ts_proto/example/prefix",
    visibility = ["//visibility:public"],
    deps = [
        "//location:location_proto",
    ],
)

ts_proto_library(
    name = "greeting_ts_proto",
    proto = ":greeting_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//location:location_ts_proto",
    ],
)

esbuild(
    name = "lib",
    entry_point = "program.mjs",
    deps = [
        #":greeting_ts_proto",
        "//location:location_ts_proto",
        "//:node_modules/google-protobuf",
    ],
)

js_binary(
    # A unique name for this target.
    name = "main",
    # The main script which is evaluated by node.js
    entry_point = "lib.js",
)

js_binary(
    # A unique name for this target.
    name = "main_unbundled",
    data = [
        ":greeting_ts_proto",
        "//:node_modules/google-protobuf",
        "//location:location_ts_proto",
    ],
    # The main script which is evaluated by node.js
    entry_point = "program.mjs",
)

npm_link_all_packages(name = "node_modules")

npm_link_package(
    name = "node_modules/google-protobuf",
    src = "//google-protobuf-debug:google-protobuf",
)
