"""Provides a simple way test of ts_proto_library."""

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_gonzojive_rules_ts_proto//ts_proto:defs.bzl", "ts_proto_library")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@example_npm//:defs.bzl", example_npm_link_all_packages = "npm_link_all_packages")

#load("@rules_ts_proto_npm//:defs.bzl", ts_proto_link_all_packages = "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

# Replace with a usage of your rule/macro
filegroup(name = "empty")

exports_files(["package.json"])

build_test(
    name = "smoke_test",
    targets = [
        # targets you add above
        ":greeting_ts_proto",
    ],
)

# gazelle:prefix github.com/gonzojive/rules_ts_proto/e2e/workspace
# gazelle:go_generate_proto false
# gazelle:proto_import_prefix github.com/gonzojive/rules_ts_proto/example/prefix
gazelle(
    name = "gazelle",
)

proto_library(
    name = "greeting_proto",
    srcs = ["greeting.proto"],
    import_prefix = "github.com/gonzojive/rules_ts_proto/example/prefix",
    visibility = ["//visibility:public"],
    deps = [
        "//location:location_proto",
    ],
)

ts_proto_library(
    name = "greeting_ts_proto",
    proto = ":greeting_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//location:location_ts_proto",
    ],
)

esbuild(
    name = "lib",
    entry_point = "program.mjs",
    deps = [
        #":greeting_ts_proto",
        "//location:location_ts_proto",
        "//:node_modules/google-protobuf",
    ],
)

js_binary(
    # A unique name for this target.
    name = "main",
    # The main script which is evaluated by node.js
    entry_point = "lib.js",
)

js_binary(
    # A unique name for this target.
    name = "main_unbundled",
    data = [
        ":greeting_ts_proto",
        "//:node_modules/google-protobuf",
        "//location:location_ts_proto",
    ],
    # The main script which is evaluated by node.js
    entry_point = "program.mjs",
)

example_npm_link_all_packages(name = "node_modules")

#ts_proto_link_all_packages(name = "node_modules")

# npm_link_package(
#     name = "node_modules/google-protobuf",
#     src = "//google-protobuf-debug:google-protobuf",
# )

ts_proto_library(
    name = "googleapis_annotations_ts_proto",
    proto = "@com_google_api//google/api:annotations_proto",
    deps = [
        ":googleapis_descriptor_ts_proto",
        ":googleapis_http_ts_proto",
    ],
)

ts_proto_library(
    name = "googleapis_auth_ts_proto",
    proto = "@com_google_api//google/api:auth_proto",
)

ts_proto_library(
    name = "googleapis_backend_ts_proto",
    proto = "@com_google_api//google/api:backend_proto",
)

ts_proto_library(
    name = "googleapis_billing_ts_proto",
    proto = "@com_google_api//google/api:billing_proto",
)

ts_proto_library(
    name = "googleapis_context_ts_proto",
    proto = "@com_google_api//google/api:context_proto",
)

ts_proto_library(
    name = "googleapis_control_ts_proto",
    proto = "@com_google_api//google/api:control_proto",
)

ts_proto_library(
    name = "googleapis_descriptor_ts_proto",
    proto = "@com_google_protobuf//:descriptor_proto",
)

ts_proto_library(
    name = "googleapis_documentation_ts_proto",
    proto = "@com_google_api//google/api:documentation_proto",
)

ts_proto_library(
    name = "googleapis_endpoint_ts_proto",
    proto = "@com_google_api//google/api:endpoint_proto",
)

ts_proto_library(
    name = "googleapis_http_ts_proto",
    proto = "@com_google_api//google/api:http_proto",
)

ts_proto_library(
    name = "googleapis_label_ts_proto",
    proto = "@com_google_api//google/api:label_proto",
)

ts_proto_library(
    name = "googleapis_launch_stage_ts_proto",
    proto = "@com_google_api//google/api:launch_stage_proto",
)

ts_proto_library(
    name = "googleapis_log_ts_proto",
    proto = "@com_google_api//google/api:log_proto",
    deps = [

        ":googleapis_label_ts_proto",
    ],
)

ts_proto_library(
    name = "googleapis_logging_ts_proto",
    proto = "@com_google_api//google/api:logging_proto",
)

ts_proto_library(
    name = "googleapis_metric_ts_proto",
    proto = "@com_google_api//google/api:metric_proto",
    deps = [
        ":googleapis_duration_ts_proto",
        ":googleapis_label_ts_proto",
        ":googleapis_launch_stage_ts_proto",
    ],
)

ts_proto_library(
    name = "googleapis_monitored_resource_ts_proto",
    proto = "@com_google_api//google/api:monitored_resource_proto",
    deps = [
        ":googleapis_label_ts_proto",
        ":googleapis_launch_stage_ts_proto",
        ":googleapis_struct_ts_proto",
    ],
)

ts_proto_library(
    name = "googleapis_monitoring_ts_proto",
    proto = "@com_google_api//google/api:monitoring_proto",
)

ts_proto_library(
    name = "googleapis_struct_ts_proto",
    proto = "@com_google_protobuf//:struct_proto",
)

ts_proto_library(
    name = "googleapis_quota_ts_proto",
    proto = "@com_google_api//google/api:quota_proto",
)

ts_proto_library(
    name = "googleapis_duration_ts_proto",
    proto = "@com_google_protobuf//:duration_proto",
)

ts_proto_library(
    name = "googleapis_source_info_ts_proto",
    proto = "@com_google_api//google/api:source_info_proto",
    deps = [
        ":googleapis_any_ts_proto",
    ],
)

ts_proto_library(
    name = "googleapis_any_ts_proto",
    proto = "@com_google_protobuf//:any_proto",
)

ts_proto_library(
    name = "googleapis_source_context_ts_proto",
    proto = "@com_google_protobuf//:source_context_proto",
)

ts_proto_library(
    name = "googleapis_type_ts_proto",
    proto = "@com_google_protobuf//:type_proto",
    deps = [
        ":googleapis_any_ts_proto",
        ":googleapis_source_context_ts_proto",
    ],
)

ts_proto_library(
    name = "googleapis_api_ts_proto",
    proto = "@com_google_protobuf//:api_proto",
    deps = [
        ":googleapis_source_context_ts_proto",
        ":googleapis_type_ts_proto",
    ],
)

ts_proto_library(
    name = "googleapis_system_parameter_ts_proto",
    proto = "@com_google_api//google/api:system_parameter_proto",
)

ts_proto_library(
    name = "googleapis_usage_ts_proto",
    proto = "@com_google_api//google/api:usage_proto",
)

ts_proto_library(
    name = "googleapis_wrappers_ts_proto",
    proto = "@com_google_protobuf//:wrappers_proto",

)

ts_proto_library(
    name = "googleapis_service_ts_proto",
    proto = "@com_google_api//google/api:service_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":googleapis_annotations_ts_proto",
        ":googleapis_api_ts_proto",
        ":googleapis_auth_ts_proto",
        ":googleapis_backend_ts_proto",
        ":googleapis_billing_ts_proto",
        ":googleapis_context_ts_proto",
        ":googleapis_control_ts_proto",
        ":googleapis_documentation_ts_proto",
        ":googleapis_duration_ts_proto",
        ":googleapis_endpoint_ts_proto",
        ":googleapis_http_ts_proto",
        ":googleapis_launch_stage_ts_proto",
        ":googleapis_log_ts_proto",
        ":googleapis_logging_ts_proto",
        ":googleapis_metric_ts_proto",
        ":googleapis_monitored_resource_ts_proto",
        ":googleapis_monitoring_ts_proto",
        ":googleapis_quota_ts_proto",
        ":googleapis_source_info_ts_proto",
        ":googleapis_system_parameter_ts_proto",
        ":googleapis_type_ts_proto",
        ":googleapis_usage_ts_proto",
        ":googleapis_wrappers_ts_proto",
    ],

)
