"""Provides a simple way test of ts_proto_library."""

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_gonzojive_rules_ts_proto//ts_proto:defs.bzl", "ts_proto_library")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@example_npm//:defs.bzl", example_npm_link_all_packages = "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

# Replace with a usage of your rule/macro
filegroup(name = "empty")

exports_files(["package.json"])

build_test(
    name = "smoke_test",
    targets = [
        # targets you add above
        ":greeting_ts_proto",
    ],
)

# gazelle:prefix github.com/gonzojive/rules_ts_proto/e2e/workspace
# gazelle:go_generate_proto false
# gazelle:proto_import_prefix github.com/gonzojive/rules_ts_proto/example/prefix
gazelle(
    name = "gazelle",
)

proto_library(
    name = "greeting_proto",
    srcs = ["greeting.proto"],
    import_prefix = "github.com/gonzojive/rules_ts_proto/example/prefix",
    visibility = ["//visibility:public"],
    deps = [
        "//location:location_proto",
    ],
)

ts_proto_library(
    name = "greeting_ts_proto",
    proto = ":greeting_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//location:location_ts_proto",
    ],
)

esbuild(
    name = "lib",
    entry_point = "program.mjs",
    deps = [
        #":greeting_ts_proto",
        "//location:location_ts_proto",
        "//:node_modules/google-protobuf",
    ],
)

js_binary(
    # A unique name for this target.
    name = "main",
    # The main script which is evaluated by node.js
    entry_point = "lib.js",
)

js_binary(
    # A unique name for this target.
    name = "main_unbundled",
    data = [
        ":greeting_ts_proto",
        "//:node_modules/google-protobuf",
        "//location:location_ts_proto",
    ],
    # The main script which is evaluated by node.js
    entry_point = "program.mjs",
)

example_npm_link_all_packages(name = "node_modules")

proto_library(
    name = "extending_proto",
    srcs = ["extending.proto"],
    import_prefix = "github.com/gonzojive/rules_ts_proto/example/prefix",
    deps = [
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_api//google/longrunning:operations_proto",
    ],
)

ts_proto_library(
    name = "extending_ts_proto",
    proto = ":extending_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":descriptor_ts_proto",
        ":operations_ts_proto",
    ],
)

ts_proto_library(
    name = "operations_ts_proto",
    proto = "@com_google_api//google/longrunning:operations_proto",
    deps = [
        ":annotations_ts_proto",
        ":any_ts_proto",
        ":client_ts_proto",
        ":descriptor_ts_proto",
        ":duration_ts_proto",
        ":empty_ts_proto",
        ":status_ts_proto",
    ],
)

ts_proto_library(
    name = "annotations_ts_proto",
    proto = "@com_google_api//google/api:annotations_proto",
    deps = [
        ":descriptor_ts_proto",
        ":http_ts_proto",
    ],
)

ts_proto_library(
    name = "any_ts_proto",
    proto = "@com_google_protobuf//:any_proto",
)

ts_proto_library(
    name = "client_ts_proto",
    proto = "@com_google_api//google/api:client_proto",
    deps = [
        ":descriptor_ts_proto",
    ],
)

ts_proto_library(
    name = "descriptor_ts_proto",
    proto = "@com_google_protobuf//:descriptor_proto",
)

ts_proto_library(
    name = "duration_ts_proto",
    proto = "@com_google_protobuf//:duration_proto",
)

ts_proto_library(
    name = "empty_ts_proto",
    proto = "@com_google_protobuf//:empty_proto",
)

ts_proto_library(
    name = "http_ts_proto",
    proto = "@com_google_api//google/api:http_proto",
)

ts_proto_library(
    name = "status_ts_proto",
    proto = "@com_google_api//google/rpc:status_proto",
    deps = [
        ":any_ts_proto",
    ],
)
