load("@rules_proto_grpc//:defs.bzl", "proto_plugin")
load("@rules_ts_proto_npm//:ts-protoc-gen/package_json.bzl", _ts_proto_gen_bin_factories = "bin")

_ts_proto_gen_bin_factories.protoc_gen_ts_binary(
    name = "protoc-gen-ts",
    visibility = ["//visibility:public"],
)

# Official Google plugin for generating JavaScript... with some heavy
# modifications to support ES6 modules.
proto_plugin(
    name = "google_js_plugin",
    exclusions = [
        "google/protobuf",
    ],
    options = [
        "import_style=es6",
        "binary",
    ],
    outputs = ["{protopath}_pb.js"],
    tool = "@com_google_protobuf_javascript//generator:protoc-gen-js",
    visibility = ["//visibility:public"],
)

# Plugin that generates type definitions for the google_js_plugin.
proto_plugin(
    name = "ts_protoc_gen_plugin",
    options = [
        # "import_style=commonjs",
        # "binary",
    ],
    outputs = ["{protopath}_pb.d.ts"],
    tool = ":protoc-gen-ts",
    use_built_in_shell_environment = False,
    visibility = ["//visibility:public"],
)

# grpc-web
proto_plugin(
    name = "com_github_grpc_grpc_web",
    # Used if the output of the generator is empty.
    # empty_template = "com_github_grpc_grpc_web_empty.js",
    options = [
        "import_style=commonjs+dts",
        "mode=grpcweb",
        "explicit_imports=true",
        "explicit_import__github.com/gonzojive/rules_ts_proto/example/prefix/greeting.proto=../foo.js",
    ],
    outputs = [
        "{protopath}_grpc_web_pb.js",
        "{protopath}_grpc_web_pb.d.ts",
    ],
    tool = "@com_github_grpc_grpc_web//javascript/net/grpc/web/generator:protoc-gen-grpc-web",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "delegating_plugin",
    options = [
        "foo=bar",
        "binary",
    ],
    outputs = [
        "{protopath}_pb.js",
        "{protopath}_pb.d.ts",
        "{protopath}_grpc_web_pb.js",
        "{protopath}_grpc_web_pb.d.ts",
    ],
    tool = "//ts_proto/codegen/protoc_plugin",
    use_built_in_shell_environment = False,
    visibility = ["//visibility:public"],
)
