load("@rules_proto_grpc//:defs.bzl", "proto_plugin")
load("@rules_ts_proto_npm//:ts-protoc-gen/package_json.bzl", _ts_proto_gen_bin_factories = "bin")

_ts_proto_gen_bin_factories.protoc_gen_ts_binary(
    name = "protoc-gen-ts",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "delegating_plugin",
    env = {
        "BAZEL_BINDIR": "{bindir}",
    },
    options = [],
    outputs = [
        "{protopath}_pb.mjs",
        "{protopath}_pb.d.mts",
        "{protopath}_grpc_web_pb.mts",
    ],
    tool = "//ts_proto/codegen/protoc_plugin",
    use_built_in_shell_environment = False,
    visibility = ["//visibility:public"],
)
