load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "ts_proto_library",
    srcs = ["ts_proto_library.bzl"],
    visibility = ["//ts_proto:__subpackages__"],
    deps = [
        "@aspect_rules_js//js:defs",
        "@aspect_rules_js//js:libs",
        "@bazel_skylib//lib:paths",
        "@rules_proto_grpc//:defs",
    ],
)
