load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":utils_unit_test.bzl", "myhelpers_test_suite")

bzl_library(
    name = "ts_proto_library",
    srcs = ["ts_proto_library.bzl"],
    visibility = ["//ts_proto:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:base64",
        "@aspect_rules_js//js:defs",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_ts//ts:defs",
        "@bazel_skylib//lib:paths",
        "@rules_proto_grpc//:defs",
    ],
)

myhelpers_test_suite(name = "myhelpers_tests")
