load("@aspect_rules_js//npm:defs.bzl", "npm_package")

npm_package(
    # A unique name for this target.
    name = "google-protobuf",
    srcs = [
        "google-protobuf.js",
        "google-protobuf.js.map",
        "package.json",
    ],
    package = "google-protobuf",
    visibility = ["//visibility:public"],
)
