load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_gonzojive_rules_ts_proto//ts_proto:defs.bzl", "ts_proto_library")

proto_library(
    name = "location_proto",
    srcs = ["location.proto"],
    import_prefix = "github.com/gonzojive/rules_ts_proto/example/prefix",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "location_ts_proto",
    proto = ":location_proto",
    visibility = ["//visibility:public"],
)
