load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["rewrite_imports.go"],
    data = [
        #"//bazel/web/targets:protoc-gen-ts",
        #"@com_google_protobuf_javascript//generator:protoc-gen-js",
    ],
    importpath = "github.com/gonzojive/rules_ts_proto/ts_proto_codegen/rewrite_imports",
    visibility = ["//visibility:private"],
    deps = [
        # "//util/runfiles:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        # "@com_github_golang_protobuf//proto:go_default_library",
        # "@org_golang_google_protobuf//encoding/prototext:go_default_library",
        # "@org_golang_google_protobuf//types/pluginpb:go_default_library",
    ],
)

go_binary(
    name = "rewrite_imports",
    args = [
        "--alsologtostderr",
    ],
    embed = [":rewrite_imports_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "rewrite_imports_lib",
    srcs = ["rewrite_imports.go"],
    importpath = "github.com/gonzojive/rules_ts_proto/ts_proto/codegen/rewrite_imports",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)
