load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")

jasmine_test(
    name = "test",
    args = ["*.spec.js"],
    chdir = package_name(),
    data = [
        "greeting.spec.js",
        "package.json",
        "//:googleapis_service_ts_proto",
        "//:greeting_ts_proto",
        "//location:location_ts_proto",
    ],
)
